Added Rebeca's info

--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -69,9 +69,11 @@
         <div class="info">
             <img src= "/static/images/IMG_3054.jpeg">
             <p>
-                Hey, I'm hajdhbf hjkegwfk qfwfef. Hey, I'm hajdhbf hjkegwfk qfwfef.
-                Hey, I'm hajdhbf hjkegwfk qfwfef. Hey, I'm hajdhbf hjkegwfk qfwfef.
-                Hey, I'm hajdhbf hjkegwfk qfwfef. Hey, I'm hajdhbf hjkegwfk qfwfef.
+                Hey y’all! My name is Rebeca, and I’m a Computer Science major at CSUMB.
+                I am passionate about using my skills for the greater good, especially in 
+                education. That is why my awesome teammates, and I have worked super hard 
+                to make this site available for all of you hot girlz! I hope all of you 
+                get to use it for your hot girl summer careerz.
             </p>
         </div>
         <div class="info">
