Added Alexia's info

--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -79,9 +79,10 @@
         <div class="info">
             <img src= "/static/images/IMG_3054.jpeg">
             <p>
-                Hey, I'm hajdhbf hjkegwfk qfwfef. Hey, I'm hajdhbf hjkegwfk qfwfef.
-                Hey, I'm hajdhbf hjkegwfk qfwfef. Hey, I'm hajdhbf hjkegwfk qfwfef.
-                Hey, I'm hajdhbf hjkegwfk qfwfef. Hey, I'm hajdhbf hjkegwfk qfwfef.
+                Hey! My name is Alexia and I'm a first year student at Hartnell College and
+                CSUMB. I am a Computer Science Major, and my teammates and I created this 
+                page to provide you all with easier access to careers, resources, and 
+                connections relating to STEM so that all of y'all can achieve your goals and dreams.
             </p>
         </div>
     </body>
