--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -48,7 +48,7 @@
         <div class="container">
             <h2>Menu</h2>
             <ul>
-                <li><a href="{{ url_for('mp') }}">Careers</a></li>
+                <li><a href="{{ url_for('cp') }}">Careers</a></li>
                 <li><a href="{{ url_for('mp') }}">Resources</a></li>
                 <li><a href="{{ url_for('mp') }}">Connect</a></li>
             </ul>
@@ -76,11 +76,12 @@
             </p>
         </div>
         <div class="info">
-            <img src= "/static/images/IMG_3054.jpeg">
+            <img src= "/static/images/picture.jpeg">
             <p>
-                Hey, I'm hajdhbf hjkegwfk qfwfef. Hey, I'm hajdhbf hjkegwfk qfwfef.
-                Hey, I'm hajdhbf hjkegwfk qfwfef. Hey, I'm hajdhbf hjkegwfk qfwfef.
-                Hey, I'm hajdhbf hjkegwfk qfwfef. Hey, I'm hajdhbf hjkegwfk qfwfef.
+                Hey! My name is Alexia and I'm a first year student at Hartnell College and
+                CSUMB. I am a Computer Science Major, and my teammates and I created this page to provide you all with easier
+                access to careers, resources, and connections relating to STEM so that
+                all of y'all can achieve your goals and dreams. 
             </p>
         </div>
     </body>
