Added templates, pictures, and modified AppRoutes.py for connect page

--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -12,7 +12,7 @@
         <title>Main Page</title>
         <style>
             body{
-                background-color: rgb(247, 158, 202);
+                background-color: rgb(229, 184, 255);
             }
             h1{
                 text-align: center;
@@ -21,7 +21,7 @@
                 width: 20%;
                 height: 100%;
                 float: left;
-                padding-left: 60px;
+                padding-left: 30px;
             }
             .info{
                 width:70%;
@@ -50,7 +50,7 @@
             <ul>
                 <li><a href="{{ url_for('cp') }}">Careers</a></li>
                 <li><a href="{{ url_for('mp') }}">Resources</a></li>
-                <li><a href="{{ url_for('mp') }}">Connect</a></li>
+                <li><a href="{{ url_for('p4') }}">Connect</a></li>
             </ul>
         </div>
         
