--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -76,7 +76,7 @@
             </p>
         </div>
         <div class="info">
-            <img src= "/static/images/picture.jpeg">
+            <img src= "/static/images/picture.jpg">
             <p>
                 Hey! My name is Alexia and I'm a first year student at Hartnell College and
                 CSUMB. I am a Computer Science Major, and my teammates and I created this page to provide you all with easier
