--- a/templates/resource_page.html
+++ b/templates/resource_page.html
@@ -24,15 +24,21 @@
                 padding-bottom: 40px;
             }
             .container{
-                width: 20%;
+                /* width: 20%; */
                 height: 100%;
                 float: left;
                 padding-left: 60px;
             }
+            .tech{
+                width:auto;
+                float: left;
+                padding-top: 30px;
+            }
             .events{
                 width:auto;
                 float: right;
-                padding-bottom: 60px;
+                padding-top: 30px;
+                padding-right: 90px;
             }
             form {
                 background-color: plum;
@@ -53,12 +59,12 @@
 
             }
         </style>
-        <form id="form" role="search">
+        <!-- <form id="form" role="search">
             <input type="search" id="query" name="q"
              placeholder="Search..."
              aria-label="Search through site content">
             <button>Search</button>
-          </form>          
+          </form>           -->
     </head>
     <body>
         <div class="container">
@@ -74,6 +80,7 @@
               </form>  
             <br>
             <br>
+        <div class="tech">
             <h1>Tech Events:</h1>
             <!--List of Tech Events w/ urls-->
             <ul>
@@ -88,9 +95,9 @@
                 <li> Tech Event 5</li>
             </ul>
             <!--<a href= "url";-->
-            </div>
+        </div>
         <div class="events">
-        <h3>Career Fairs:</h3>
+        <h1>Career Fairs:</h1>
         <!--list of Career fairs w/ urls-->
             <ul>
                 <li>  Fair 1 </li>
