--- a/templates/vgh.html
+++ b/templates/vgh.html
@@ -1,3 +1,10 @@
+<!-- Title: vgh.html  -->
+<!-- Author: Stephanie Hernandez -->
+<!-- Class: CST 205 -->
+<!-- Prof: Avner Biblarz -->
+<!-- CST 205 Final Project  -->
+<!-- Abstract: GitHub Information Template, will show
+     all the poeple's Github repos post made on the connect page. -->
 <!doctype html>
 <html lang="en">
     <head>
@@ -22,6 +29,7 @@
                 <div class="card-body">
                     <h2 class="card-title">GitHub Repos:</h2>
                     <ol class="list-group">
+                        <!-- Displays GitHub repo Info -->
                         {% for item in repos %}
                         <li>
                             <ul class="list-group-item">
