--- a/templates/vppl.html
+++ b/templates/vppl.html
@@ -1,3 +1,11 @@
+<!-- Title: vppl.html  -->
+<!-- Author: Stephanie Hernandez -->
+<!-- Class: CST 205 -->
+<!-- Prof: Avner Biblarz -->
+<!-- CST 205 Final Project  -->
+<!-- Abstract: LinkedIn Information Template, will show
+     all the poeple's LinkedIn profiles and information so
+     they can contact one another. -->
 <!doctype html>
 <html lang="en">
     <head>
@@ -22,6 +30,7 @@
                 <div class="card-body">
                     <h2 class="card-title">LinkedIn Profiles:</h2>
                     <ol class="list-group">
+                        <!-- Displays each person's LinkedIn Info -->
                         {% for item in people %}
                         <li>
                             <ul class="list-group-item">
