--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -50,7 +50,7 @@
             <ul>
                 <li><a href="{{ url_for('cp') }}">Careers</a></li>
                 <li><a href = " {{ url_for ('cpform') }}">Employers</a></li>
-                <li><a href="{{ url_for('mp') }}">Resources</a></li>
+                <li><a href="{{ url_for('rp') }}">Resources</a></li>
                 <li><a href="{{ url_for('p4') }}">Connect</a></li>
             </ul>
         </div>
