--- a/templates/resource_page.html
+++ b/templates/resource_page.html
@@ -64,19 +64,24 @@
               <!--List of Tech Events w/ urls-->
               <ul>
                   <li> <a href= "https://events.google.com/io/?lng=en"> Google 1/0 Event</a></li>
-                  	<p> Information:</p>
+                    <p> Information: Connect with developers from around the world at this year's virtual <br>Google I/O for thoughtful discussions, hands-on learning with Google experts,<br> and a first look at the latest developer products.</p>
+                    <p> Date and Time: May 18 to 20 at 9:40 am PT</p>
                   <br>
                   <li> <a href= "https://www.eventbrite.com/e/coding-for-women-by-women-live-online-tickets-146844677383"> Coding For Women By Women</a></li>
-                  	<p> Information: </p>
+                    <p> Information:This workshop will discuss beginner JavaScript skills,<br> approaches to beginner problems, share resources that helped women<br> on their road to code, answer questions, and more. </p>
+                    <p> Date and Time: Thursay, May 20 at 4:00 pm PDT </p>
                   <br>
                   <li><a href="https://www.eventbrite.com/e/women-in-leadership-forum-the-future-of-stem-tickets-150951519057?aff=ebdssbonlinesearch"> Women in Leadership Forum: The Future of STEM</a></li>
-                  	<p> Information: </p>
+                    <p> Information: Join the UN Women USA Chicago Chapter for the Women in <br>Leadership Forum. The topic at hand: The Future of STEM </p>
+                    <p> Date and Time: Thursay, May 20 at 4:00 pm PDT </p>
                   <br>
                   <li> <a href="https://www.eventbrite.com/e/sisters-of-science-stem-fireside-chat-tickets-145683271587?aff=ebdssbonlinesearch&keep_tld=1">Sisters of Science STEM Fireside Chat </a></li>
-                  	<p> Information: </p>
+                    <p> Information:Fireside Chat focused on female entrepreneurs and business leaders<br> that have used STEM in their business and how they've applied it in their careers.  </p>
+                    <p> Date and Time: Tuesday, May 18 at 8:00 am PDT </p>
                   <br>
                   <li> <a href="https://www.docker.com/dockercon-live/2021"> DockerCon LIVE 2020 </a></li>
-                  	<p> Information: </p>
+                    <p> Information:DockerCon 2021 is a free, one day virtual event that<br> is a unique experience for developers and development teams who are <br>building the next generation of modern applications. If you want to<br> learn about how to go from code to cloud fast and how to solve your<br> development challenges, DockerCon 2021 offers engaging live content to<br> help you build, share and run your applications. </p>
+                    <p> Date and Time: May 27 at 9:00 am PDT</p>
                   <br>
               </ul>
               <!--<a href= "url";-->
@@ -88,19 +93,20 @@
           <!--list of Career fairs w/ urls-->
               <ul>
                   <li> <a href="https://www.eventbrite.com/e/scwist-job-fair-women-in-stem-registration-142770824379?aff=ebdssbonlinesearch&keep_tld=1"> Women in STEM Job Fair </a></li>
-                  	<p> Information: </p>
+                    <p> Information: Job fair focused on connecting Canadian employers <br>to women and other underrepresented STEM groups. STEM companies ranging <br>from start-ups to well-established corporations ready to hire, on-the-spot.<br> Plus: HR specialists and recruiters will be present to provide one-on-one resume review! </p>
+                    <p> Date and Time: Thursday, May 27 at 3:00 pm PDT </p>
                   <br>
                   <li> <a href="https://www.aiaa.org/events-learning/event/2021/06/09/default-calendar/professional-virtual-career-fair-june-2021"> Shaping the Future of Aerospace professional Virtual Career Fair </a></li>
-                  	<p> Information: </p>
+                    <p> Information: Receive dedicated time with employers looking to hire at <br>the AIAA Virtual Career Fairs. Speak directly with recruiters<br> through private, one-on-one online chats. </p>
+                    <p> Date and Time: June 9 at 1500 (3:00 pm ET) Eastern Daylight Time </p>
                   <br>
-                  <li> Fair 3 </li>
-                		<p> Information:</p>
+                  <li><a href="https://stemwomenevents.com/event/5172"> USA STEM Careers Event </a>  </li>
+                    <p> Information: Virtual career event and network live (chat, audio and video!<br> with STEM graduate employers in the USA, where you can hear insightful presentations<br> from exhibiting companies and ask your questions to a panel of women<br> already working in STEM industries! You can also visit virtual company stands <br>to learn more and apply for graduate jobs. </p>
+                    <p> Date and Time: Thursday September 9, 12:00 pm BST (4:00 am PT)</p>
                   <br>
-                  <li> Fair 4 </li>
-                  	<p> Information: </p>
-                  <br>
-                  <li> Fair 5 </li>
-                  	<p> Information: </p>
+                  <li><a href="https://intouch.ccgmag.com/mpage/woc-stem-conference-job-seekers"> WOC STEM Conference </a> </li>
+                    <p> Information: The career fair platform is built around job seeking activities.<br> Attendees can recieve job and career information when you register early, get on-the-spot<br> interviews from select employers, Internship opportunities, Graduate<br> program information and speak with hiring managers on platform.   </p>
+                    <p>Date and Time: Saturday, October 29 at 10:00 am EDT (7:00 am PT) </p>
               </ul>
           </div>
           <br>
